# senseBox-bike-Arduino

./: .gitignore  BIKE.CFG.example  BMXhelpers.ino  GPShelpers.ino  HCSR04Helpers.ino  README.md  RGBLEDhelpers.ino  SDhelpers.ino  aGENERALhelpers.ino  futuriumSDNoAp.ino  geoFenceHelper.ino
bikeMain/: GPShelpers.ino  HCSR04Helpers.ino  bikeMain.ino
bikeMain10/: GPShelpers.ino  RGBLEDhelpers.ino  bikeMain.ino  geoFenceHelper.ino
blink/: blink.ino
futuriumSDNoAp/: GPShelpers.ino  LICENSE  SDhelpers.ino  aGENERALhelpers.ino  futuriumSDNoAp.ino
senseBox-bike-atrai/: README.md  display.cpp  display.h  initSensors.ino  senseBox-bike-atrai.ino  sensorFunctions.ino  systemFunctions.ino
senseBox-bike-atrai-esp-idf-nimble/: CMakeLists.txt  README.md  config.env  kconfigs.in  kconfigs_projbuild.in  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
senseBox-bike-atrai-esp-idf-nimble/main/: CMakeLists.txt  app_main.cpp  idf_component.yml  main.cpp
senseBox-bike-atrai-esp-idf-nimble/main/include/: BLEModule.h  ModelPostProcessor.hpp  particulate_matter.hpp  surface_category_name.hpp  surface_classification.hpp
senseBox-bike-atrai-esp-idf-nimble/main/models/: raw_mobilenet.espdl
senseBox-bike-atrai-esp-idf-nimble/main/src/: BLEModule.c  BLEModule.h  ModelPostProcessor.cpp  particulate_matter.cpp  surface_classification.cpp
senseBox-bike-atrai-v2/: platformio.ini
senseBox-bike-atrai-v2-2ToF/: platformio.ini
senseBox-bike-mcus2/: initSensors.ino  senseBox-bike-mcus2.ino  sensorFunctions.ino
senseBox-bike-nancy/: platformio.ini
senseBox-bike-v0/: README.md
(+312 files in other folders)
